# showusthedata-api

./: Dockerfile  docker-compose.dev.yml  pyproject.toml  requirements.txt  sample.env
.github/workflows/: build-dev.yml  build-main.yml  build-prod.yml
src/: .main.py.swp  main.py
src/database/: __init__.py  adapters.py  authors.py  database.py  datasets.py  models.py  publications.py  topics.py
