[tool.poetry]
name = "showusthedata-api"
version = "0.0.1"
description = ""
authors = ["Joon-Yee Chuah <jchuah@tacc.utexas.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.4"
sqlalchemy = "^1.4.31"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
